Aktualizacja Strony, poprawa viewport, formularza wysyłki

--- a/style.css
+++ b/style.css
@@ -23,6 +23,26 @@ Author: walerasan@gmail.com
     flex-wrap: wrap;
     justify-content: center;
   }
-  .poleszerokosc{
-    width: 50px;
+  
+  .SinglePage{
+    background-color: #585858;
+    text-align:center;
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:20px;
+    margin-bottom:40px;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+  .wpcf7 input{
+    width: 100%;
+  }
+  .wpcf7-textarea{
+    width: 100%;
+  }
+  .wpcf7-submit{
+    width:50% !important;
   }
